sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value plusGrand
		if(plusPetit(i-1,i)&&plusGrand(i,i+1))
                                     ^