sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i:Int = 1;
	var hasSwap: Boolean = false;
	do
	{
		hasSwap = false;
		if(plusPetit(i-1,i)&&plusGrand(i,i+1))
			{
				i+=1;
			}
		else{
			echange(i+1,i-1)
			hasSwap = true;
		}
	}while(!hasSwap)
	
}